Add starter improvements